# EasyCmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: easy.cmake
